  * Option to delete old versions of GridFileSystem entries.
  * Filename is now optional for Grid#put.
  * Option to write arbitrary attributes to a file: @grid.put(@data, :favorite_phrase => "blimey!")
  * Indexes created on the chunks collection are now unique. If you have an existing chunks collection,
    you may want to remove 
* Removed the following deprecated items:
  * GridStore class

* BSON-related code extracted into two separate gems: bson and bson_ext (thx to Chuck Remes).
  * mongo_ext no longer exists.
  * BSON::Binary constructor can now take a string, which will be packed into an array.
  * Exception class adjustments:
    * Mongo::InvalidObjectID moved to BSON::InvalidObjectID
    * Mongo::InvalidDocument moved to BSON::InvalidDocument
    * Mongo::InvalidStringEncoding moved to BSON::InvalidStringEncoding
    * Mongo::InvalidName replaced by Mongo::InvalidNSName and BSON::InvalidKeyName
  * BSON types are now namespaced under the BSON module. These types include:
    * Binary
    * ObjectID
    * Code
    * DBRef
    * MinKey and MaxKey
  * Extensions compile on Rubinius (Chuck Remes).

0.19.3 2010-4-5
* Minor fix for assert_valid_keys.

0.19.2 2010-4-5
This release fixes a major bug and is the final release
in the 0.19 series. The next release, 0.20.0, will introduce
separate gems for bson and bson_ext and may require small
changes to existing code bases. Expect that release in the next
few days.
* Fix for Grid#delete bug.
* Log messages read like valid ruby driver code.
* Cursor#has_next.
* Tests for MongoDB 1.4 features.
* Flexible index creation method with Mongo::GEO2D constant.

0.19.1 2010-3-2
* Fix for HashWithIndifferentAccess in ActiveSupport-3.0

0.19 2010-3-1
* Deprecated GridFS::GridStore. Grid and GridFileSystem classes replace
the GridFS implementation with a simpler API and vastly-improved performance.
See http://www.mongodb.org/display/DOCS/GridFS+in+Ruby for more details.
* Safe mode for Grid and GridFileSystem.