@@ -36,7 +36,6 @@ require 'bson/types/binary'
 require 'bson/types/code'
 require 'bson/types/dbref'
 require 'bson/types/objectid'
-require 'bson/types/regexp_of_holding'
 require 'bson/types/min_max_keys'
 
 require 'base64'
