@@ -12,6 +12,7 @@
     you may want to remove 
 * Removed the following deprecated items:
   * GridStore class
+  * RegexpOfHolding class
 
 * BSON-related code extracted into two separate gems: bson and bson_ext (thx to Chuck Remes).
   * mongo_ext no longer exists.
